[package]
name = "lepton-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { features = ["secrets", "json"], version = "0.5.0-rc.2" }
tokio = { version = "1.21.1", features = ["full"]}
mongodb = "2.3.0"
serde = { version = "1.0.145", features=["derive"]}
dotenv = "0.15.0"
bitflags = "1.3.2"
rust-crypto = "0.2.36"
hex = "0.4.3"
jsonwebtoken = "8.1.1"
rand = "0.8.5"
lazy_static = "1.4.0"
bson = "2.4.0"
async-trait = "0.1.57"
serde_json = "1.0.85"
chrono = { version = "0.4.22", features = ["serde"]}